﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.52.exe
  25 января 2024 11:15
  
  [+] Добавлена команда directIO DIO_GET_RECEIPT_RESPONSE_PARAM = 101
      для запроса параметров чека из ответа сервера. 
	  pData - не используется
	  pString - название поля, возможные значения:
	  CheckNumber, DateTime, OfflineMode, CashboxOfflineMode, 
	  Cashbox.UniqueNumber, Cashbox.RegistrationNumber, Cashbox.IdentityNumber, 
	  Cashbox.Address, Cashbox.Ofd.Code, Cashbox.Ofd.Host, Cashbox.Ofd.Name,
	  CheckOrderNumber, ShiftNumber, EmployeeName, TicketUrl, TicketPrintUrl, 
	  
  [+] Добавлена команда directIO DIO_GET_RECEIPT_RESPONSE_FIELD = 102
      для запроса параметров чека из ответа сервера. 
	  pData - не используется
	  pString - название поля, возможные значения:
	  Data.CheckNumber, Data.DateTime, Data.OfflineMode, Data.CashboxOfflineMode, 
	  Data.Cashbox.UniqueNumber, Data.Cashbox.RegistrationNumber, Data.Cashbox.IdentityNumber, 
	  Data.Cashbox.Address, Data.Cashbox.Ofd.Code, Data.Cashbox.Ofd.Host, Data.Cashbox.Ofd.Name,
	  Data.CheckOrderNumber, Data.ShiftNumber, Data.EmployeeName, Data.TicketUrl, Data.TicketPrintUrl, 
    
  [+] Добавлена команда directIO DIO_GET_REQUEST_JSON_FIELD = 103
      для запроса полей запроса к серверу
  
  [+] Добавлена команда directIO DIO_GET_RESPONSE_JSON_FIELD = 104
      для запроса полей ответа сервера
  
*******************************************************************

  OposWebKassa_0.51.exe
  19 января 2024 21, 
  
  [-] Изменена печать тестового чека
  
*******************************************************************

  OposWebKassa_0.50.exe
  12 января 2024 16, 
  
  [-] Убрал ненужные запросы кассиров и рабочих мест
  