@@ -1,59 +1,27 @@
 [Closed Files]
-File_0=SourceModule,'D:\projects\WebKassa\src\Shared\DIOHandlers.pas',0,1,115,26,130,0,0
-File_1=SourceModule,'D:\projects\WebKassa\src\Opos\OposServiceDevice19.pas',0,1,156,109,164,0,0
-File_2=SourceModule,'D:\projects\WebKassa\src\OposWebkassa\units\RecPrinter.pas',0,1,1,23,21,0,0
-File_3=SourceModule,'D:\projects\WebKassa\src\Shared\EscPrinter.pas',0,1,1577,12,1583,0,0
-File_4=SourceModule,'D:\projects\WebKassa\src\Shared\LogFile.pas',0,1,468,106,472,0,0
-File_5=SourceModule,'D:\projects\WebKassa\src\Shared\PrinterParametersReg.pas',0,1,119,1,134,0,0
-File_6=SourceModule,'D:\projects\WebKassa\src\OposConfig\Units\FiscalPrinterDevice.pas',0,1,91,1,106,0,0
-File_7=SourceModule,'D:\projects\WebKassa\src\Shared\uZintInterface.pas',0,1,1,1,1,0,0
+File_0=SourceModule,'D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas',0,1,1,1,414,0,0
+File_1=SourceModule,'D:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas',0,1,388,3,422,0,0
+File_2=SourceModule,'D:\projects\WebKassa\src\OposWebkassa\Units\oleFiscalPrinter.pas',0,1,484,1,505,0,0
+File_3=SourceModule,'c:\program files (x86)\borland\delphi7\Comp\dunit\src\TestFramework.pas',0,1,305,15,326,0,0
+File_4=SourceModule,'D:\projects\WebKassa\test\OposWebkassaTest\units\duWebkassaImpl.pas',0,1,1182,1,1183,0,0
+File_5=SourceModule,'c:\program files (x86)\borland\delphi7\Comp\gnugettext\gnugettext.pas',0,1,1221,1,1240,0,0
+File_6=SourceModule,'D:\projects\WebKassa\src\Opos\OposException.pas',0,1,73,1,92,0,0
+File_7=SourceModule,'D:\projects\WebKassa\src\Shared\uLkJSON.pas',0,1,457,9,468,0,0
 
 [Modules]
-Module0=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
-Module1=D:\projects\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas
-Module2=D:\projects\WebKassa\src\Shared\uLkJSON.pas
-Module3=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas
-Count=4
+Module0=D:\projects\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas
+Module1=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
+Count=2
 EditWindowCount=1
 TypeLibWindowCount=1
-
-[D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
 
 [D:\projects\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
-[D:\projects\WebKassa\src\Shared\uLkJSON.pas]
+[D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas]
 ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\test\OposWebkassaTest\OposWebkassaTestLib.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\test\OposWebkassaTest\OposWebkassaTest.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\src\OposWebkassa\OposWebkassa.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\projects\WebKassa\src\OposConfig\OposConfig.dpr]
 FormState=0
 FormOnTop=0
 
@@ -61,7 +29,15 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
+[D:\projects\WebKassa\src\OposConfig\OposConfig.dpr]
+FormState=0
+FormOnTop=0
+
 [D:\projects\WebKassa\src\OposTest\OposTest.dpr]
+FormState=0
+FormOnTop=0
+
+[D:\projects\WebKassa\src\OposWebkassa\OposWebkassa.dpr]
 FormState=0
 FormOnTop=0
 
@@ -69,13 +45,23 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
+[D:\projects\WebKassa\test\OposWebkassaTest\OposWebkassaTest.dpr]
+FormState=0
+FormOnTop=0
+
+[D:\projects\WebKassa\test\OposWebkassaTest\OposWebkassaTestLib.dpr]
+FormState=0
+FormOnTop=0
+
+[D:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
+FormState=0
+FormOnTop=0
+
 [EditWindow0]
-ViewCount=4
+ViewCount=2
 CurrentView=1
 View0=0
 View1=1
-View2=2
-View3=3
 CodeExplorer=CodeExplorer@EditWindow0
 MessageView=MessageView@EditWindow0
 Create=1
@@ -90,39 +76,21 @@ MaxTop=-1
 ClientWidth=1286
 ClientHeight=643
 LeftPanelSize=0
-LeftPanelClients=CodeExplorer@EditWindow0
-LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
 RightPanelSize=0
-BottomPanelSize=85
-BottomPanelClients=MessageView@EditWindow0
-BottomPanelData=000004000000000000000000000000000000000000000000000100000000000000000B0000004D65737361676556696577FFFFFFFF
+BottomPanelSize=0
 
 [View0]
-Module=D:\projects\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas
-CursorX=30
-CursorY=120
-TopLine=107
+Module=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
+CursorX=1
+CursorY=3350
+TopLine=3322
 LeftCol=1
 
 [View1]
-Module=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
-CursorX=83
-CursorY=1094
-TopLine=1087
-LeftCol=1
-
-[View2]
-Module=D:\projects\WebKassa\src\Shared\uLkJSON.pas
-CursorX=9
-CursorY=468
-TopLine=457
-LeftCol=1
-
-[View3]
-Module=D:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas
-CursorX=2
-CursorY=522
-TopLine=506
+Module=D:\projects\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas
+CursorX=1
+CursorY=123
+TopLine=100
 LeftCol=1
 
 [TypeLibEditWindow0]
@@ -180,11 +148,11 @@ Left=268
 Top=225
 Width=1652
 Height=123
-MaxLeft=-8
-MaxTop=-8
-MaxWidth=1932
+MaxLeft=-1
+MaxTop=-1
+MaxWidth=1936
 MaxHeight=123
-ClientWidth=1916
+ClientWidth=1920
 ClientHeight=84
 
 [ProjectManager]
@@ -440,30 +408,30 @@ Dockable=1
 Create=1
 Visible=0
 State=0
-Left=-164
-Top=-9
+Left=204
+Top=162
 Width=140
 Height=305
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=140
-ClientHeight=305
+ClientWidth=124
+ClientHeight=266
 TBDockHeight=305
 LRDockWidth=140
 Dockable=1
 
 [MessageView@EditWindow0]
 Create=1
-Visible=1
+Visible=0
 State=0
-Left=12
-Top=0
-Width=1274
+Left=198
+Top=107
+Width=443
 Height=85
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=1274
-ClientHeight=85
+ClientWidth=427
+ClientHeight=46
 TBDockHeight=85
 LRDockWidth=443
 Dockable=1
