@@ -48,7 +48,7 @@ Width=1608
 Height=839
 Maximized=0
 UseRegistry=0
-ResultsPanel.Height=363
+ResultsPanel.Height=136
 ErrorMessage.Height=200
 ErrorMessage.Visible=1
 FailureList.ColumnWidth[0]=175
@@ -94,6 +94,7 @@ TestReceiptTemplate3=1
 TestBarcode=1
 TestReceiptTemplate4=1
 TestNonFiscal2=1
+TestClaim=1
 [Tests.OposWebkassaTest.exe.TWebkassaClientTest2]
 TestAuthenticate=1
 TestAuthenticateError=1
