@@ -6,8 +6,10 @@
 
 *******************************************************************
 
-  OposWebKassa_0.52.exe
-  25 января 2024 11:15
+  OposWebKassa_0.53.exe
+  25 января 2024 23:23
+  
+  [+] Сделано подключение к серверу в методе Claim
   
   [+] Добавлена команда directIO DIO_GET_RECEIPT_RESPONSE_PARAM = 101
       для запроса параметров чека из ответа сервера. 
